# comfyui-easyapi-nodes

./: LICENSE  README.md  __init__.py  global.json  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
easyapi/: BboxNode.py  DetectNode.py  ForEachNode.py  ImageNode.py  SamNode.py  UtilNode.py  api.py  logScript.py  mirrorUrlApply.py  settings.py  util.py
static/js/: custom_node.js  debounce.js  dialog.js  easyapi.js  image_node.js  workflows.js
