[project]
name = "comfyui-easyapi-nodes"
description = "Provides some features and nodes related to API calls. 开发独立应用调用ComfyUI服务的一些补充节点。"
version = "1.1.1"
license = { file = "LICENSE" }
dependencies = ["segment_anything", "simple_lama_inpainting", "insightface", "simplejson"]

[project.urls]
Repository = "https://github.com/lldacing/comfyui-easyapi-nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "lldacing"
DisplayName = "comfyui-easyapi-nodes"
Icon = ""
